--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <link rel="shortcut icon" href=images/favicon.png" type="image/x-icon">
 </head>
 <body>
-    <div class="as_loader">
+    <!-- <div class="as_loader">
         <img src="images/loader.png" alt="" class="img-responsive">
-    </div> 
+    </div>  -->
     <div class="as_main_wrapper">
         <section class="as_header_wrapper">
             <div class="as_logo">
